convert plain html landing+detail+checkout

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,5 +20,11 @@
         "@typescript-eslint"
     ],
     "rules": {
+        "react/jsx-filename-extension": [1, {"extensions": [".js", ".jsx", ".ts", ".tsx"]}],
+        "react/react-in-jsx-scope": "off",
+        "react/jsx-props-no-spreading": "off",
+        "jsx-a11y/anchor-is-valid": "off",
+        "linebreak-style":"off",
+        "jsx-a11y/label-has-associated-control":"off"
     }
 }
