--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,8 @@
         "react/jsx-props-no-spreading": "off",
         "jsx-a11y/anchor-is-valid": "off",
         "linebreak-style":"off",
-        "jsx-a11y/label-has-associated-control":"off"
+        "jsx-a11y/label-has-associated-control":"off",
+        "import/no-unresolved":"off",
+        "import/extensions":"off"
     }
 }
