--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "add": "^2.0.6",
     "aos": "^2.3.4",
+    "axios": "^0.21.4",
     "classnames": "^2.3.1",
     "next": "11.1.2",
     "react": "17.0.2",
