--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "aos": "^2.3.4",
     "axios": "^0.21.4",
     "classnames": "^2.3.1",
+    "js-cookie": "^3.0.1",
+    "jwt-decode": "^3.1.2",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
