feat - build success

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_API = https://store-gg-server.herokuapp.com
 NEXT_PUBLIC_API_FILE = https://store-gg-server.herokuapp.com/uploads
+NEXT_PUBLIC_API_DRIVE = https://drive.google.com/uc?id=
