--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@types/js-cookie": "^3.0.0",
     "add": "^2.0.6",
     "aos": "^2.3.4",
     "axios": "^0.21.4",
@@ -29,6 +30,7 @@
     "@storybook/addon-essentials": "^6.3.7",
     "@storybook/addon-links": "^6.3.7",
     "@storybook/react": "^6.3.7",
+    "@types/aos": "^3.0.4",
     "@types/react": "17.0.19",
     "@typescript-eslint/eslint-plugin": "^4.30.0",
     "@typescript-eslint/parser": "^4.30.0",
